# nsS3ui

./: .gitignore  README.md  pyproject.toml
src/nss3ui/: __init__.py  __main__.py  app.py  app_controller.py  config.py  credentials.py  local_cache.py  s3client.py  state.py  transfer_manager.py
src/nss3ui/ui/: bucket_panel.py  connect_dialog.py  delegates.py  error_text.py  icons.py  main_window.py  object_browser.py  object_model.py  object_ops.py  preview_panel.py  settings_dialog.py  theme.py  transfer_model.py  transfer_panel.py
src/nss3ui/workers/: __init__.py  async_list_worker.py  folder_worker.py  list_worker.py  local_drop_scan_worker.py  prefix_move_worker.py  signals.py  transfer_worker.py
