[project]
name = "nss3ui"
version = "0.1.0"
description = "A professional S3 GUI client"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7.0",
    "boto3>=1.34.0",
    "aioboto3>=13.0.0",
    "keyring>=25.0.0",
    "humanize>=4.9.0",
    "python-dateutil>=2.9.0",
]

[project.scripts]
nss3ui = "nss3ui.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nss3ui"]
